ref: refactored login apis
